# nebula

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.prod.yml  docker-compose.yml  load-env.fish  load-env.sh
.github/workflows/: build.yml  ci.yml  content.yml  deploy.yml  docker.yml  release.yml
.hooks/: README  pre-commit
content/blog/: compiler-ideas-for-code-generation.md  hello-world.md  proto-wrapper-plugin.md  redesigning-my-blog.md
content/projects/: nebula.md  proto-wrapper-plugin.md
deploy/: .env.prod.example  nginx-alnovis.io.conf  setup-server.sh
docs/: CONTENT_GUIDE.md  MERMAID_EXPORT.md  PLAN.md  ROADMAP.md
migrations/: 001_initial.sql
scripts/: changelog-gen.sh  release.sh  upload-images.sh
src/: config.rs  email.rs  lib.rs  main.rs  state.rs  turnstile.rs  views.rs
src/content/: markdown.rs  mod.rs
src/models/: mod.rs  post.rs  project.rs
src/routes/: admin.rs  blog.rs  contact.rs  feeds.rs  health.rs  mod.rs  pages.rs  projects.rs  resume.rs
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  contact.html  contact_success.html  index.html  resume.html
templates/blog/: list.html  post.html  tag.html
templates/partials/: critical-css.html  scripts.html
templates/projects/: list.html  show.html
