[package]
name = "nebula"
version = "0.2.11"
edition = "2021"
authors = ["Alexander Novikov <dev@alnovis.io>"]
description = "Personal website and blog engine built with Rust, Axum, and HTMX"
license = "MIT"
repository = "https://github.com/alnovis/nebula"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown processing
pulldown-cmark = "0.10"
syntect = "5"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"

# File watching for development
notify = "6"

# RSS feed generation
rss = "2"

# Sitemap generation
quick-xml = { version = "0.31", features = ["serialize"] }

# HTTP client for Resend API and Turnstile verification
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
axum-test = "14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
